tests/invalids/invalidArray4.gt
proc main ()
    int a[,4]
begin 
    read m;
end
